--- a/ProjectDemoCRS/ProjectDemoCRS.vbproj
+++ b/ProjectDemoCRS/ProjectDemoCRS.vbproj
@@ -136,6 +136,19 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="StudentInformation\Subject.vb" />
+    <Compile Include="TeacherInformation\Teacher.vb" />
+    <Compile Include="TeacherInformation\TeacherForm.Designer.vb">
+      <DependentUpon>TeacherForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherInformation\TeacherForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TeacherInformation\TeacherListForm.Designer.vb">
+      <DependentUpon>TeacherListForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherInformation\TeacherListForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CrsMainForm.resx">
@@ -164,6 +177,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="StudentInformation\StudentListForm.resx">
       <DependentUpon>StudentListForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherInformation\TeacherForm.resx">
+      <DependentUpon>TeacherForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherInformation\TeacherListForm.resx">
+      <DependentUpon>TeacherListForm.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
