--- a/ProjectDemoCRS/ProjectDemoCRS.vbproj
+++ b/ProjectDemoCRS/ProjectDemoCRS.vbproj
@@ -14,6 +14,21 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -142,6 +157,30 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="StudentInformation\Subject.vb" />
+    <Compile Include="StudentRegistrationSubject\StudentInformationForm.Designer.vb">
+      <DependentUpon>StudentInformationForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="StudentRegistrationSubject\StudentInformationForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StudentRegistrationSubject\StudentListSubjectCodeForm.Designer.vb">
+      <DependentUpon>StudentListSubjectCodeForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="StudentRegistrationSubject\StudentListSubjectCodeForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StudentViewList\StudentViewListForm.Designer.vb">
+      <DependentUpon>StudentViewListForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="StudentViewList\StudentViewListForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SubjectInformation\SubjectListForm.Designer.vb">
+      <DependentUpon>SubjectListForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="SubjectInformation\SubjectListForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="TeacherInformation\Teacher.vb" />
     <Compile Include="TeacherInformation\TeacherForm.Designer.vb">
       <DependentUpon>TeacherForm.vb</DependentUpon>
@@ -200,6 +239,18 @@
     <EmbeddedResource Include="StudentInformation\StudentListForm.resx">
       <DependentUpon>StudentListForm.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="StudentRegistrationSubject\StudentInformationForm.resx">
+      <DependentUpon>StudentInformationForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StudentRegistrationSubject\StudentListSubjectCodeForm.resx">
+      <DependentUpon>StudentListSubjectCodeForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StudentViewList\StudentViewListForm.resx">
+      <DependentUpon>StudentViewListForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SubjectInformation\SubjectListForm.resx">
+      <DependentUpon>SubjectListForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TeacherInformation\TeacherForm.resx">
       <DependentUpon>TeacherForm.vb</DependentUpon>
     </EmbeddedResource>
@@ -224,6 +275,18 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
