--- a/ProjectDemoCRS/ProjectDemoCRS.vbproj
+++ b/ProjectDemoCRS/ProjectDemoCRS.vbproj
@@ -107,6 +107,13 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Login\LoginModel.vb" />
+    <Compile Include="Login\ResetPassword.vb" />
+    <Compile Include="Login\ResetPasswordForm.Designer.vb">
+      <DependentUpon>ResetPasswordForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Login\ResetPasswordForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Login\UserClass.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -236,6 +243,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login\LoginForm.resx">
       <DependentUpon>LoginForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login\ResetPasswordForm.resx">
+      <DependentUpon>ResetPasswordForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
